[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://Scripts/Board/portable_game_notation.gd" id="1"]

[node name="PortableGameNotation" type="Node2D"]
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_top = 0.0
anchor_bottom = 1.0
offset_left = -200.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 40.0
vertical_scroll_mode = 2

[node name="MovesVBox" type="VBoxContainer" parent="Panel/ScrollContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonsHBox" type="HBoxContainer" parent="Panel"]
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -40.0

[node name="FirstButton" type="Button" parent="Panel/ButtonsHBox"]
text = "<<"

[node name="BackButton" type="Button" parent="Panel/ButtonsHBox"]
text = "<"

[node name="ForwardButton" type="Button" parent="Panel/ButtonsHBox"]
text = ">"

[node name="LastButton" type="Button" parent="Panel/ButtonsHBox"]
text = ">>"
